# mlops-template

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  Readme.md  app.py  docker-compose.yml  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  template.py
.dvc/: .gitignore  config
.github/workflows/: mlops_ci_cd.yaml
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: mlops_template_pipeline.py
api/: Dockerfile  app.py  requirements-api.txt
config/: config.yaml
experiments/: data_ingestion.ipynb  data_transformation.ipynb  model_trainig.ipynb  modelevaluation.ipynb
mlflow/: Dockerfile
mlruns/0/: meta.yaml
params/: params.yaml
src/project_name/: __init__.py
src/project_name.egg-info/: PKG-INFO  SOURCES.txt
src/project_name/Utills/: utills.py
src/project_name/components/: __init__.py  dataIngestion.py  datatransformation.py  modelevaluation.py  modelprediction.py  modeltraining.py  test.py
src/project_name/config/: configManager.py
src/project_name/entity/: config_entity.py
src/project_name/pipeline/: stage_01_dataingestion.py  stage_02_datatransformation.py  stage_03_model_training.py  stage_04_model_evaluation.py
templates/: Dockerfile  home.py  requirements-ui.txt
